# Crux

./: .gitignore  README.md  crux_server.py  pyproject.toml
crux/: actions.py  cards.py  controller.py  decks.py  game.py  main.py  player.py
crux_client/: package-lock.json  package.json
crux_client/public/: index.html
crux_client/src/: App.js  Game.js
crux_client/src/context/: socket.js
tests/: test_actions.py  test_deck.py  test_game.py
