[tool.poetry]
name = "Crux"
version = "0.1.0"
description = ""
authors = ["Max Perraudin <max.perraudin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.1.14"
Flask = "^2.0.2"
Flask-SocketIO = "^5.1.1"
simple-websocket = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
